--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -6,16 +6,16 @@
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
             <th scope="col">Title</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Image</th>
+            <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let obj of childTable; let i = index">
             <th scope="row">{{obj.id}}</th>
             
-            <td>{{obj.title}}</td>
+            <td>{{obj.Image}}</td>
             <td> <img [src]="obj.thumbnailUrl"> </td>
             <td> <button class="btn btn-primary" (click)="remove(i)"> remove</button></td>
           </tr>
